<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 Ascendit Sp. z o. o.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see https://www.gnu.org/licenses/
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navComp"
        android:icon="@drawable/ic_baseline_photo_24"
        android:title="@string/navbar_comp" />
    <item
        android:id="@+id/navStats"
        android:icon="@drawable/ic_baseline_bar_chart_24"
        android:title="@string/navbar_stats" />
    <item
        android:id="@+id/navDirs"
        android:icon="@drawable/ic_baseline_folder_24"
        android:title="@string/navbar_dirs" />
</menu>