<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 Ascendit Sp. z o. o.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see https://www.gnu.org/licenses/
  ~
  -->

<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.AboutFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="24dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:scrollbars="vertical">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="272dp"
                android:layout_height="64dp"
                android:src="@drawable/ascendit"/>

            <Space
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tvThanks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_thank_you"
                android:textSize="18sp"/>

            <ImageView
                android:id="@+id/ivSignature"
                android:layout_marginTop="20dp"
                android:layout_width="272dp"
                android:layout_height="36dp"
                android:src="@drawable/signature"/>

            <Space
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tvContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_contact_me"
                android:textSize="18sp"/>

            <ImageView
                android:id="@+id/ivMail"
                android:layout_width="134dp"
                android:layout_height="54dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/mail"/>

            <Space
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tvMedia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_find_me"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_marginTop="13dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Space
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5" />

                <ImageView
                    android:id="@+id/ivLinkedin"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:src="@drawable/linkedin"/>

                <Space
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <ImageView
                    android:id="@+id/ivGithub"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:src="@drawable/github"/>

                <Space
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <ImageView
                    android:id="@+id/ivWebsite"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:src="@drawable/web"/>

                <Space
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:layout_weight="1.5"/>
            </LinearLayout>

            <Space
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tvVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version_info"/>

            <Space
                android:layout_width="1dp"
                android:layout_height="8dp"/>

            <TextView
                android:id="@+id/tvCopyright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_copyright_info"/>

            <Space
                android:layout_width="1dp"
                android:layout_height="8dp"/>

            <TextView
                android:id="@+id/tvLicence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_licence_info"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>