<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 Ascendit Sp. z o. o.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see https://www.gnu.org/licenses/
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="16dp"
    tools:context=".fragment.DirsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:minHeight="250dp"
        app:layout_constraintBottom_toTopOf="@+id/btAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/dir_item" />

    <Button
        android:id="@+id/btAdd"
        style="@style/Widget.Material3.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/dirs_bt_add"
        app:icon="@drawable/ic_baseline_add_24"
        app:iconGravity="start"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btDelete"
        app:layout_constraintTop_toBottomOf="@+id/list" />

    <Button
        android:id="@+id/btDelete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/dirs_bt_delete"
        style="@style/Widget.Material3.Button.UnelevatedButton"
        app:icon="@drawable/ic_baseline_delete_24"
        app:iconGravity="start"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btAdd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btAdd" />

    <TextView
        android:id="@+id/tvNoDirs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lineSpacingExtra="6sp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/dirs_no_dirs"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/list"
        app:layout_constraintEnd_toEndOf="@+id/list"
        app:layout_constraintStart_toStartOf="@+id/list"
        app:layout_constraintTop_toTopOf="@+id/list" />

</androidx.constraintlayout.widget.ConstraintLayout>